@@ -1,3 +1,7 @@
+2001-06-22  Elliot Lee  <sopwith@redhat.com>
+
+	* gnome-gettext.m4: N'sync with the gnome1 version, bye bye buggies.
+
 2001-06-13  Martin Baulig  <baulig@suse.de>
 
 	* gnome-pkgconfig.m4 (GNOME_CHECK_PKGCONFIG): Require pkg-config 0.7.0
